fixed chopstick animation x-overflow bug

--- a/styles/bg.css
+++ b/styles/bg.css
@@ -1,6 +1,7 @@
 html,
 body {
   scroll-behavior: smooth !important;
+  overflow-x: hidden;
 }
 
 :root {
